neutron (2:8.0.0~b2-0ubuntu7) UNRELEASED; urgency=medium

  * d/rules: Ensure that neutron-linuxbridge-cleanup init configurations
    are installed in the correct package (LP: #1550004).

 -- James Page <james.page@ubuntu.com>  Fri, 26 Feb 2016 08:03:10 +0000

neutron (2:8.0.0~b2-0ubuntu6) xenial; urgency=medium

  * d/neutron-server.init.in: Restore missing source of
    /e/d/neutron-server prior to trying to configure daemon arguments
    (LP: #1549919).

 -- James Page <james.page@ubuntu.com>  Thu, 25 Feb 2016 18:12:27 +0000

neutron (2:8.0.0~b2-0ubuntu5) xenial; urgency=medium

  * d/control,neutron-plugin-openvswitch-agent.*: Add transitional package for
    upgrades, ensure that old init and upstart configurations are removed
    (LP: #1548242).
  * d/*.default,neutron-server.init.in: Revert commits which mistakenly
    tied ovs or linuxbridge agents to the neutron-server package (LP: #1548245).
  * d/control,neutron-{plugin-}linuxbridge-agent.*: Rename
    neutron-plugin-linuxbridge-agent -> neutron-linuxbridge-agent inline with
    other agent packages (LP: #1548244).
  * d/control: Add dependency on conntrack for openvswitch and linuxbridge
    packages (LP: #1514731).
  * d/control,*.install,*.init.in,*.service.in,*.update.in: Re-jig locations
    of ml2 plugin and associated agent files so that openvswitch, linuxbridge
    and sriov agents no longer need to include ml2_conf.ini (LP: #1527005).
  * d/control,neutron-{plugin-}sriov-agent.*: Rename
    neutron-plugin-sriov-agent -> neutron-sriov-agent inline with
    other agent packages (LP: #1548244).
  * d/tests/*: Refactor and reduce tests; ML2 is the only plugin now in neutron
    core, so no need to continue to carry infrastructure for testing other
    plugins.
  * d/control: Drop old Breaks/Replaces on quantum-* packages.

 -- James Page <james.page@ubuntu.com>  Mon, 22 Feb 2016 13:47:02 +0000

neutron (2:8.0.0~b2-0ubuntu4) xenial; urgency=medium
