@@ -5,8 +5,12 @@ author "Corey Bryant <corey.bryant@canonical.com>"
 start on started neutron-plugin-linuxbridge-agent
 stop on runlevel [!2345]
 
+env OSLO_LOCK_PATH=/var/lock/neutron
+
 pre-start script
-  [ ! -x /usr/bin/neutron-linuxbridge-cleanup ] && exit 0 
+  [ ! -x /usr/bin/neutron-linuxbridge-cleanup ] && exit 0
+  mkdir -p /var/run/neutron /var/lock/neutron
+  chown neutron:root /var/run/neutron /var/lock/neutron
   start-stop-daemon --start --chuid neutron --exec /usr/bin/neutron-linuxbridge-cleanup -- \
     --log-file /var/log/neutron/linuxbridge-cleanup.log \
     --config-file /etc/neutron/neutron.conf --verbose
