@@ -2,6 +2,8 @@ neutron (2:8.0.0~b2-0ubuntu7) UNRELEASED; urgency=medium
 
   * d/rules: Ensure that neutron-linuxbridge-cleanup init configurations
     are installed in the correct package (LP: #1550004).
+  * d/*.upstart.in: Ensure a sensible OSLO_LOCK_PATH default is set for
+    all neutron agents (LP: #1550188).
 
  -- James Page <james.page@ubuntu.com>  Fri, 26 Feb 2016 08:03:10 +0000
 
